--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "probabit-platform",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@tabler/icons-react": "^3.35.0",
     "clsx": "^1.2.1",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.263.0",
     "react": "^18.2.0",
@@ -28,6 +30,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   }
 }
