--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@tabler/icons-react": "^3.35.0",
     "clsx": "^1.2.1",
-    "express": "^4.18.2",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.263.0",
     "react": "^18.2.0",
@@ -30,7 +29,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "node server.js"
+    "preview": "vite preview"
   }
 }
