Fix Vercel MIME type error: update config and build settings

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "probabit-platform",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-icons": "^1.3.2",
